RP-736 Bring all RIR clauses into line with common report function that checks if legacy issues should be recorded